# image_retrieval_demo

./: .gitignore  CMakeLists.txt  README.md  build.sh  make_voc.cpp  one_hot_gen.cpp  query.cpp
